--- a/packageManifest.json
+++ b/packageManifest.json
@@ -1,5 +1,5 @@
 {
-  "packageName": "YoLink™ Device Service",
+  "packageName": "YoLink Device Service",
   "author": "Steven Barcus",
   "version": "1.0",
   "minimumHEVersion": "2.1.9",
